# ruxlog

./: .env.dev  .env.example  .env.prod  .env.remote  .env.stage  .env.test  .gitignore  AGENTS.md  CHANGELOG.md  CONSUMER_AUTH_IMPLEMENTATION.md  CONTRIBUTING.md  Cargo.toml  Justfile  deny.toml  docker-compose.yml  e2e-snapshot-home.md  garage-to-rustfs.md  test-consumer-features.sh
backend/api/: AGENTS.md  Cargo.toml  justfile
backend/api/crates/rux-auth/: Cargo.toml
backend/api/crates/rux-auth/src/: error.rs  lib.rs
backend/api/docs/: MISSING_FEATURES.md
backend/api/examples_bin/: sc002_check.rs
backend/api/migration/: Cargo.toml
backend/api/migration/src/: lib.rs  m20250502_000001_create_user_table.rs  m20250502_000002_create_email_verification_table.rs  m20250502_000004_create_category_table.rs  m20250502_000006_create_post_table.rs  m20250503_000001_create_asset_table.rs  m20251104_000025_create_route_status_table.rs  m20251106_000027_fill_posts_content_from_string.rs  m20251202_000030_create_seed_runs_table.rs  m20251205_000033_create_app_constants_table.rs  m20251220_000035_create_user_bans_table.rs  m20260125_000036_alter_media_add_bucket_drop_file_url.rs  m20260512_000037_create_plans_table.rs  m20260512_000038_create_subscriptions_table.rs  m20260512_000039_create_payments_table.rs  m20260512_000040_create_invoices_table.rs  m20260512_000041_create_payout_accounts_table.rs  m20260512_000042_create_payout_ledger_table.rs  m20260512_000043_create_discount_codes_table.rs  m20260512_000044_create_audit_logs_table.rs  m20260512_000045_create_post_access_table.rs  m20260512_000046_add_search_vector_to_posts.rs  m20260617_000047_hash_verification_codes.rs  m20260617_000048_create_post_purchases_table.rs  m20260618_000049_subscriptions_provider_sub_id_unique.rs  m20260620_000050_add_totp_last_used_counter.rs  m20260620_000051_payout_account_metadata_encryption_runbook.rs  m20260627_000052_alter_user_add_session_auth_secret_and_encrypt_fields.rs
backend/api/scripts/: archive_changes.rs  backfill_payout_metadata.rs  backfill_user_field_crypto.rs  restore_changes.rs  ruxlog_tui.rs
backend/api/src/: docs.rs  lib.rs  main.rs  router.rs  state.rs
backend/api/src/db/: sea_connect.rs
backend/api/src/db/sea_models/: mod.rs
backend/api/src/error/: auth.rs  codes.rs  database.rs  response.rs
backend/api/src/middlewares/: auth_guard.rs  mod.rs  rate_limit.rs  route_blocker.rs  security_headers.rs  static_csrf.rs
backend/api/src/modules/: mod.rs
backend/api/src/modules/admin_acl_v1/: mod.rs
backend/api/src/modules/admin_route_v1/: mod.rs
backend/api/src/modules/analytics_v1/: controller.rs  mod.rs  validator.rs
backend/api/src/modules/auth_v1/: controller.rs  mod.rs  validator.rs
backend/api/src/modules/billing_v1/: controller.rs  mod.rs  validator.rs
backend/api/src/modules/category_v1/: controller.rs  mod.rs
backend/api/src/modules/csrf_v1/: controller.rs
backend/api/src/modules/email_verification_v1/: controller.rs  validator.rs
backend/api/src/modules/feed_v1/: mod.rs
backend/api/src/modules/forgot_password_v1/: controller.rs  validator.rs
backend/api/src/modules/media_v1/: mod.rs  (+2 more)
backend/api/src/services/: abuse_limiter.rs  acl_service.rs  auth.rs  image_optimizer.rs  mod.rs  paywall.rs  redis.rs  route_blocker_config.rs  route_blocker_service.rs  scheduler.rs  seed_config.rs
backend/api/src/test_utils/: csrf.rs  mod.rs  request.rs
backend/api/src/tui/: app.rs
backend/api/src/utils/: code_hash.rs  field_crypto.rs  mod.rs  sanitize.rs  sort.rs  twofa.rs
backend/api/tests/: _analytics_common.sh  api_integration.rs  auth_v1_smoke.sh  billing_providers.rs  comment_moderation_v1_smoke.sh  cookies.txt  post_v1_smoke.sh  request_body_limits.rs  security_tests.rs  tag_v1_sort_smoke.sh
backend/api/tests/fixtures/: 240kb.json  260kb.json
crates/ruxlog-types/: Cargo.toml
crates/ruxlog-types/src/: error.rs  lib.rs  pagination.rs  query.rs  slug.rs
crates/ruxlog-types/src/enums/: billing.rs  media.rs  mod.rs  newsletter.rs  post.rs  user.rs
crates/ruxlog-types/src/types/: mod.rs
frontend/consumer-dioxus/: AGENTS.md  Cargo.toml  Dioxus.toml  index.html
frontend/consumer-dioxus/assets/: tailwind.css
frontend/consumer-dioxus/content/posts/: android-native-renderer-android-main-fix.md  demo-ssg-blockers-and-fixes.md  demo-ssg-debug-references.md  getting-started-dioxus-ssg.md  how-to-do-ssg-in-dioxus.md  how-your-input-unblocked-the-fix.md  native-vs-non-native-renderers-mobile-desktop.md  release-builds-demo-static-content-status.md  server-side-rendering-in-dioxus.md  static-hosting-notes.md
frontend/consumer-dioxus/public/: firebase-init.js  robots.txt
frontend/consumer-dioxus/public/assets/: OG_IMAGE_README.md
frontend/consumer-dioxus/src/: config.rs  env.rs  main.rs  router.rs  server_fns.rs
frontend/consumer-dioxus/src/analytics/: bindings.rs  hooks.rs  mod.rs  tracker.rs
frontend/consumer-dioxus/src/components/: ambient_canvas_background.rs  banner.rs  category_card.rs  comments_section.rs  cookie_consent.rs  engagement.rs  featured_post_card.rs  mod.rs  mouse_tracking_card.rs  paywall.rs  post_card.rs  reading_progress.rs  related_posts.rs  series_navigation.rs  share_box.rs  table_of_contents.rs  tag_card.rs
frontend/consumer-dioxus/src/containers/: auth_guard_wrapper.rs  mod.rs
frontend/consumer-dioxus/src/demo_content/: mod.rs
frontend/consumer-dioxus/src/hooks/: categories.rs  mod.rs  posts.rs  tags.rs
frontend/consumer-dioxus/src/screens/: about.rs  advertise.rs  contact.rs  mod.rs  privacy_policy.rs  terms.rs
frontend/consumer-dioxus/src/seo/: components.rs  config.rs  hooks.rs  metadata.rs  mod.rs  structured_data.rs  utils.rs
frontend/consumer-dioxus/src/server/: mod.rs
frontend/consumer-dioxus/src/utils/: mod.rs  persist.rs
frontend/oxcore/: Cargo.toml
frontend/oxcore/src/http/: config.rs  mod.rs  native.rs  wasm.rs
frontend/oxui/: Cargo.toml
frontend/oxui/src/: lib.rs  utils.rs
frontend/oxui/src/components/: loading_overlay.rs
frontend/oxui/src/shadcn/: breadcrumb.rs  skeleton.rs
(+280 files in other folders)
