[package]
name = "ruxlog"
default-run = "ruxlog"
version = "0.1.0"
edition = "2021"
# Self-hosted application binary, never published to crates.io. Declaring
# `publish = false` also makes cargo-deny's `licenses.private = { ignore }`
# skip this crate's (intentionally absent) license field deterministically,
# matching the other private path-crates (migration, rux-auth, ruxlog-types).
publish = false

[features]
default = ["basic"]

# Basic blog (minimal) - DEFAULT for open source release
basic = []

# Full feature set (opt-in for development/private use)
full = [
    "auth-oauth",
    "auth-2fa",
    "comments",
    "newsletter",
    "analytics",
    "user-management",
    "image-optimization",
    "admin-acl",
    "admin-routes",
    "billing",
]

# Individual features
auth-oauth = ["oauth2"]
auth-2fa = []
comments = []
newsletter = []
analytics = []
user-management = []
image-optimization = ["image"]
admin-acl = []
admin-routes = []
# CRYP-RNG-006 / CRYP-GAP-013: seed-system is dev/admin tooling only. It is
# deliberately excluded from `default` and `full`, and the only binary that
# requires it (ruxlog_tui) is gated by `required-features`. The
# `.github/workflows/release-guard.yml` job fails any build where seed-system
# is enabled, so no predictable seed RNG ships in a release binary.
seed-system = []
scheduler = []

# OpenAPI documentation
openapi = ["utoipa", "utoipa-swagger-ui"]

# Billing / monetization — all providers always compiled when billing is on
billing = []

[dependencies]
rux-auth = { path = "./crates/rux-auth" }
migration = { path = "./migration" }
ruxlog-types = { path = "../../crates/ruxlog-types", features = ["backend", "slug"] }
axum = { version = "0.8.9", features = ["multipart"] }
axum-extra = { version = "0.10.1", features = [
    "typed-header",
    "cookie",
    "query",
] }
sea-orm = { version = "1.1.2", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "debug-print",
    "with-chrono",
    "with-json",
    "debug-print",
] }
# axum-login removed - replaced by rux-auth
fake = { version = "4.3.0", features = ["derive"] }
validator = { version = "0.20.0", features = ["derive"] }
axum-valid = { version = "0.23.0", default-features = false, features = [
    "basic",
    "validator",
    "into_json",
] }
serde_json = "1.0.130"
tower-livereload = "0.9.6"
tokio = { version = "1.45", features = ["full"] }
serde = { version = "1.0.225", features = ["derive"] }
# validator = { version = "0.16.1", features = ["derive"] }
tower-http = { version = "0.6.2", features = [
    "trace",
    "compression-gzip",
    "cors",
    "limit",
    "fs",
] }
tower_governor = "0.4.2"
tower-sessions-redis-store = "0.16.0"
tower-sessions = { version = "0.14", features = ["private"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
tracing = "0.1.41"
opentelemetry = { version = "0.31.0", features = ["metrics", "trace", "logs"] }
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio", "metrics", "trace", "logs"] }
opentelemetry-otlp = { version = "0.31.0", features = ["http-proto", "reqwest-blocking-client", "metrics", "logs", "trace"] }
tracing-opentelemetry = "0.32.0"
opentelemetry-appender-tracing = "0.31.1"
opentelemetry-semantic-conventions = "0.31.0"
dotenvy = "0.15.7"
chrono = { version = "0.4.40", features = ["serde"] }
axum-macros = "0.5.0"
thiserror = "2.0.12"
password-auth = "1.0.0"
time = "0.3.47"
governor = "0.6.3"
hex = "0.4.3"
sha2 = "0.10.8"
axum_csrf = { version = "0.11.0", features = ["layer"] }
base64 = "0.22.1"
rand = "0.9"
# CRYP-RNG-006: explicit ChaCha20 RNG so the seeders can pull from OS entropy
# (ChaCha20Rng::from_os_rng) instead of a predictable StdRng::seed_from_u64.
rand_chacha = "0.9"
clap = { version = "4.5", features = ["derive"] }
fred = { version = "10.1.0", features = ["sha-1", "i-scripts", "enable-rustls"] }
axum-client-ip = "1.0.0"
# DEPS-NATIVE-TLS-1: standardize outbound TLS on rustls. The prior
# `tokio1-native-tls` feature pulled OpenSSL into the default build via the SMTP
# path while the rest of the stack (sea-orm, fred, AWS SDK) is rustls-only.
# `tokio1-rustls-tls` provides the async executor + rustls STARTTLS/TLS backend
# for `AsyncSmtpTransport`; `smtp-transport` + `builder` are the transports and
# message builder the mailer uses. native-tls / OpenSSL is no longer linked.
lettre = { version = "0.11.22", default-features = false, features = [
    "smtp-transport",
    "builder",
    "tokio1-rustls-tls",
] }
regex = "1.12"
lazy_static = "1.5.0"
async-trait = "0.1.88"
tera = "1"
log = "0.4.27"

# DEPS-AWS-SDK-LEGACY-TLS: the AWS SDK's *default* features compile BOTH the
# legacy HTTPS stack (hyper 0.14 + rustls 0.21 + rustls-webpki 0.101, which
# carries RUSTSEC-2026-0098/0099/0104 — name-constraint bypass + CRL panic) and
# the modern one (hyper 1.x + rustls 0.23 + aws-lc-rs + webpki 0.103). The app
# only ever uses the modern client (aws_config::from_env() + Client::new() in
# main.rs:144-159; no HyperClientBuilder/legacy path). Setting
# default-features = false on BOTH crates and opting into rt-tokio +
# default-https-client removes the entire legacy stack from every build, after
# which the three deny.toml RUSTSEC ignores can be deleted. Both crates must be
# changed together or cargo feature-unification re-pulls the legacy stack.
aws-config = { version = "1.6.2", default-features = false, features = [
    "behavior-version-latest",
    "rt-tokio",
    "default-https-client",
] }
aws-sdk-s3 = { version = "1.83.0", default-features = false, features = [
    "behavior-version-latest",
    "rt-tokio",
    "default-https-client",
] }
uuid = { version = "1.17", features = ["v4", "fast-rng"] }
base32 = "0.5.1"
hmac = "0.12.1"
sha1 = "0.10.6"
# AES-256-GCM for field-level encryption at rest (payout_accounts.metadata,
# CWE-312). Pulled in transitively by other crates; declared explicitly so the
# field-crypto util owns a stable version. See utils::field_crypto (V-MED-11).
aes-gcm = "0.10.3"
# Constant-time comparison used by every webhook verifier + 2FA. See plan 1c.
subtle = "2.6.1"
# Best-effort in-memory secret hygiene (CWE-316/459). `zeroize` scrubs the
# transient field-encryption key arrays (nonce / packed ciphertext / decrypted
# bytes) on drop so they are not left in heap/stack memory longer than
# necessary. The process-wide master key lives in a `static OnceLock` whose
# payload is `Zeroizing`, so it is scrubbed if the cell is ever dropped locally
# (note: Rust does not run `Drop` for statics at process exit, so teardown-time
# scrubbing of the master key is best-effort, not guaranteed — the OS reclaims
# the pages). See utils::field_crypto (GAP-016).
zeroize = { version = "1", features = ["derive"] }
# CRYP-ENC-012: best-effort secret hygiene for billing provider credentials
# (api_key / client_secret / webhook_secret / access_token). Wrapping these in
# `secrecy::SecretString` makes the secret opt-in to read (`.expose_secret()`)
# and gives a redacting `Debug` by default, so a derived `Debug` or an
# accidental `{:?}` of a provider struct never leaks a live credential.
# See state::ObjectStorageConfig for the same redaction discipline.
secrecy = "0.10"
# Paddle Billing signs webhooks with Ed25519. See plan 1b (Paddle).
ed25519-dalek = { version = "2.1.1", default-features = false }
# HTML allowlist sanitizer for stored post content (EditorJS blocks). Renders the
# `dangerous_inner_html` frontend sinks inert by stripping <script>/event
# handlers/`javascript:` URLs server-side on read. See plan Phase 6e.
ammonia = "4"
data-encoding = "2.3.3"
getrandom = "0.2"
urlencoding = "2.1.3"
imagesize = "0.12.0"
bytes = "1.11.1"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "tiff"], optional = true }
# DEPS-NATIVE-TLS-1: rustls for the direct HTTP client (Google userinfo, billing
# providers). `default-features = false` drops reqwest's `default-tls`
# (native-tls/OpenSSL); we re-add the non-TLS defaults we rely on (charset,
# http2). TLS comes from `rustls-tls`, keeping the whole outbound TLS surface on
# the audited rustls/webpki chain.
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "cookies",
    "rustls-tls",
    "charset",
    "http2",
] }
maxminddb = "0.27"
tower = { version = "0.5", features = ["util"] }
oauth2 = { version = "4.4", optional = true }
# jsonwebtoken: raise the floor to 10.4 — CVE-2026-25537 (type confusion)
# affects <10.3.0. The root lockfile already resolves 10.4.0; pinning the floor
# here guarantees a future resolve can never pull a vulnerable 10.2.x.
jsonwebtoken = { version = "10.4", features = ["aws_lc_rs"] }
ratatui = "0.29"
crossterm = "0.29"
tuirealm = "3.2.0"
tui-realm-stdlib = "3.0.0"
utoipa = { version = "5", features = ["axum_extras"], optional = true }
utoipa-swagger-ui = { version = "9", features = ["axum"], optional = true }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
wiremock = "0.6"

[[bin]]
name = "generate_hash"
path = "scripts/generate_hash.rs"

[[bin]]
name = "generate_csrf"
path = "scripts/generate_csrf.rs"

[[bin]]
name = "archive_changes"
path = "scripts/archive_changes.rs"

[[bin]]
name = "restore_changes"
path = "scripts/restore_changes.rs"

[[bin]]
name = "ruxlog_tui"
path = "scripts/ruxlog_tui.rs"
required-features = ["seed-system"]

[[bin]]
name = "ruxlog-backfill-user-field-crypto"
path = "scripts/backfill_user_field_crypto.rs"
required-features = ["full"]

[[bin]]
name = "ruxlog-backfill-payout-metadata"
path = "scripts/backfill_payout_metadata.rs"
required-features = ["full"]
