[package]
name = "ruxlog-types"
version = "0.1.0"
edition = "2021"
description = "Shared domain types for the ruxlog backend and frontend"
publish = false

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

# Optional: chrono for DateTime fields in response types
chrono = { version = "0.4.40", features = ["serde"], optional = true }

# Optional: validator for request payload validation
validator = { version = "0.20.0", features = ["derive"], optional = true }

# Optional: sea-orm derives for backend enums
sea-orm = { version = "1.1.0", optional = true }
strum = { version = "0.26", features = ["derive"], optional = true }

# Optional: regex for slug sanitization
regex = { version = "1.11.1", optional = true }

[features]
default = ["chrono"]
validator = ["dep:validator"]
backend = ["dep:sea-orm", "dep:strum"]
slug = ["dep:regex"]
