[package]
name = "consumer-dioxus"
version = "0.1.0"
authors = ["hmziqrs <hmziqrs@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
dioxus = { version = "0.7.3", features = ["router", "fullstack"] }
dioxus-ssr = { version = "0.7.3", optional = true }
dioxus-liveview = { version = "0.7.3", optional = true }
dioxus-time = { version = "0.7.3" }
serde = "1.0.219"
serde_json = "1.0.140"
validator = { version = "0.20", features = ["derive"] }
hmziq-dioxus-free-icons = { version = "0.10.1", features = [
    "simple-icons",
    "lucide",
] }
dioxus-charts = "0.1.0"
regex = "1.10.3"
ammonia = "4.0.0"
scraper = "0.20.0"
base64 = "0.22"
dotenvy = "0.15.7"
log = "0.4.20"
once_cell = "1.19.0"
lazy_static = "1.4.0"
im = "15.1.0"
futures-channel = "0.3"
futures-util = "0.3.31"
oxcore = { path = "../oxcore" }
oxstore = { path = "../oxstore" }
oxform = { path = "../oxform" }
oxui = { path = "../oxui" }
ruxlog-shared = { path = "../ruxlog-shared" }
urlencoding = "2.1"
include_dir = { version = "0.7.4", optional = true }
serde_yaml = { version = "0.9.34", optional = true }
pulldown-cmark = { version = "0.13.0", optional = true }

# Server-only dependencies
tokio = { version = "1", features = ["full"], optional = true }

# WASM-only dependencies (feature-gated)
gloo-timers = { version = "0.3.0", features = ["futures"], optional = true }
gloo-storage = { version = "0.3.0", optional = true }
gloo-utils = { version = "0.2.0", optional = true }
gloo-net = { version = "0.6.0", default-features = true, optional = true }
wasm-bindgen = { version = "0.2.100", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
serde-wasm-bindgen = { version = "0.6.5", optional = true }
getrandom = { version = "0.3.4", features = ["wasm_js"], optional = true }
bevy_pkv = { version = "0.9", default-features = false, features = ["redb"], optional = true }
uuid = { version = "1.16.0", features = ["v4", "js"], optional = true }
photon-rs = { version = "0.3.2", optional = true }
web-sys = { version = "0.3.69", optional = true, features = [
    "Document",
    "Window",
    "HtmlDocument",
    "Element",
    "HtmlElement",
    "DomRect",
    "NodeList",
    "EventTarget",
    "Node",
    "AttributeNameValue",
    "HtmlInputElement",
    "FileList",
    "File",
    "Blob",
    "Url",
    "CssStyleDeclaration",
    "FormData",
    "RequestCredentials",
    "Navigator",
    "Clipboard",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "ImageData",
    "HtmlImageElement",
    "ImageBitmap",
    "FilePropertyBag",
    "BlobPropertyBag",
    "Selection",
    "Range",
    "CustomEvent",
    "Event",
] }

[patch.crates-io]
# dioxus-time = { git = "https://github.com/DioxusLabs/sdk", branch = "main", version = "0.1.0-alpha.1" }
dioxus-time = { path = "../dioxus_pkgs/sdk/packages/time", version = "0.7.3" }

[features]
default = ["web", "basic", "analytics"]
web = [
    "dioxus/web",
    "gloo-storage",
    "gloo-timers",
    "gloo-utils",
    "gloo-net",
    "wasm-bindgen",
    "wasm-bindgen-futures",
    "js-sys",
    "serde-wasm-bindgen",
    "web-sys",
    "bevy_pkv",
    "getrandom",
    "uuid",
    "photon-rs",
]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server", "dioxus-ssr", "tokio"]

# Blog feature flags
basic = []
full = ["consumer-auth", "profile-management", "comments", "engagement"]

# Authentication features
consumer-auth = []           # Enables login/register/auth functionality
profile-management = ["consumer-auth"]  # Requires consumer-auth
comments = []
engagement = []              # Enables views, likes, and social engagement metrics
analytics = []               # Enables Firebase Analytics tracking (wasm32-only, enabled by default)
demo-static-content = ["include_dir", "serde_yaml", "pulldown-cmark"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[build-dependencies]
dotenvy = "0.15.7"

[target.'cfg(target_os = "android")'.dependencies]
android-activity = "0.6"
blitz-shell = "0.2.3"
