[package]
name = "oxui"
version = "0.1.0"
authors = ["hmziqrs <hmziqrs@gmail.com>"]
edition = "2021"

[dependencies]
dioxus = { version = "0.7.3" }
hmziq-dioxus-free-icons = { version = "0.10.1", features = ["simple-icons", "lucide"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
im = "15.1.0"
uuid = { version = "1.16.0", features = ["v4"] }
oxform = { path = "../oxform" }
oxstore = { path = "../oxstore" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["time"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
dioxus = { version = "0.7.3", features = ["web"] }
uuid = { version = "1.16.0", features = ["v4", "js"] }
js-sys = "0.3"
gloo-timers = { version = "0.3.0", features = ["futures"] }
web-sys = { version = "0.3.69", features = [
    "Document",
    "Window",
    "Element",
    "HtmlElement",
    "DomRect",
    "CssStyleDeclaration",
] }
wasm-bindgen = "0.2.100"

[features]
default = []
web = []

[profile.wasm-dev]
inherits = "dev"
opt-level = 1
